<resources>
    <string name="app_name">ITE Online Shop</string>
    <!--Name of Menu-->
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="profile">My Profile</string>
    <string name="More">More</string>
    <string name="search">Search Product</string>


    <string name="productname">Product Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="rating">Rating</string>
    <string name="des">Description</string>

    <string name="addorder">Add Order</string>
    <string name="orderNow">Order Now</string>

    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="Help_and_support">Help and Support</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="scan">Scan me</string>
</resources>