<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_700"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nameproduct"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="20dp"
                tools:text="@string/productname"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/rating"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="20dp"
            tools:text="@string/rating"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="300dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/des"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:textSize="20dp"
            tools:text="@string/des"/>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/bachgroud"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_shop"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:text="@string/orderNow"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>