<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:text="@string/profile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_marginStart="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#757575"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        android:layout_marginHorizontal="10dp">
                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            tools:text="Full Name"/>
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            tools:text="@string/email"/>
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"
                        android:layout_marginEnd="10dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:backgroundTint="@color/teal_700"
                    tools:text="email@gmail.com"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/phoneNumber"/>
                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:backgroundTint="@color/teal_700"
                    android:textSize="18dp"
                    tools:text="000 000 000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/gender"/>
                <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:backgroundTint="@color/teal_700"
                    tools:text="Male"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/birthday"/>
                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/teal_700"
                    tools:text="DD-MM-YY"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/address"/>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:gravity="start"
                    tools:text="@string/address"
                    android:textColor="@color/black"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:background="@drawable/address"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
      

</FrameLayout>