<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shap"
            android:drawableStart="@drawable/ic_search"
            android:drawableEnd="@drawable/ic_camera"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/search"
            android:textColorHint="@color/white"
            android:textSize="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_height="40dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bachgroud"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_addorder"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:text="@string/addorder"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bachgroud"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_shop"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:text="@string/orderNow"
                    />

            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</FrameLayout>