<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_marginStart="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="#757575"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="50dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        android:layout_marginHorizontal="10dp">
                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            tools:text="Full Name"/>
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            tools:text="@string/email"/>
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"
                        android:layout_marginEnd="10dp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_notification"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/notification"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_history"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/history"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_save"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/save"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_scan"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/scan"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_priority"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/Help_and_support"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_setting"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/setting"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bachgroud"
                    android:layout_marginHorizontal="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/log_out"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>